--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,18 @@ asgiref==3.3.1
 black==20.8b1
 click==7.1.2
 coverage==5.5
+dj-database-url==0.5.0
+dj-email-url==1.0.2
 Django==3.1.7
+django-cache-url==3.2.3
 django-crispy-forms==1.11.1
+environs==9.3.2
 freezegun==1.1.0
+marshmallow==3.11.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
 python-dateutil==2.8.1
+python-dotenv==0.17.0
 pytz==2021.1
 regex==2021.4.4
 six==1.15.0
